--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -439,6 +439,39 @@ header .navItem span {
   }
 }
 
+
+.lds-circle {
+    display: flex;
+    width: 100%;
+    transform: translateZ(1px);
+    justify-content: center;
+}
+.lds-circle > div {
+    display: block;
+    width: 51px;
+    height: 51px;
+    margin: 6px;
+    border-radius: 50%;
+    background: #00BCD4;
+    animation: lds-circle 2.4s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+@keyframes lds-circle {
+    0%, 100% {
+        animation-timing-function: cubic-bezier(0.5, 0, 1, 0.5);
+    }
+    0% {
+        transform: rotateY(0deg);
+    }
+    50% {
+        transform: rotateY(1800deg);
+        animation-timing-function: cubic-bezier(0, 0.5, 0.5, 1);
+    }
+    100% {
+        transform: rotateY(3600deg);
+    }
+}
+
+
 .hide-load-more {
     display: none;
 }
