--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -46,6 +46,7 @@ header .open_nav {
     right: 16px;
     z-index: 1001;
     top: 15px;
+    border: none;
 }
 
 .search-form {
@@ -53,7 +54,7 @@ header .open_nav {
     height: 0;
     transition: 0.5s ease;
     overflow: hidden;
-    background: white;
+    background-color: #f5f5f578;
     position: relative;
 }
 
@@ -65,6 +66,10 @@ header .open_nav {
     width: 100%;
     height: 100%;
     padding-left: 40px;
+}
+
+.search-input:focus {
+    outline: none;
 }
 
 .close-search {
@@ -509,4 +514,13 @@ header .navItem span {
 
 .invisible {
     visibility: hidden;
+}
+
+.not-found {
+    font-size: 20px;
+    color: #686868;
+    font-weight: 300;
+    width: 100%;
+    margin-top: 30px;
+    text-align: center;
 }
