--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -56,6 +56,7 @@ header .open_nav {
     overflow: hidden;
     background-color: #f5f5f578;
     position: relative;
+    border: none;
 }
 
 .search-form-open {
@@ -66,6 +67,7 @@ header .open_nav {
     width: 100%;
     height: 100%;
     padding-left: 40px;
+    border: none;
 }
 
 .search-input:focus {
